Inserindo metodo compra de ingresso, e validações para insert de evento e busca

--- a/Desafio/appsettings.json
+++ b/Desafio/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=root;password=Undethome45;port=3306;database=Eventos; persistsecurityinfo = True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
